objects/Case_Message__c.object
<CustomObject>
    <description>Case Message with details for any attachments or comments created on the case.</description>
    <fields>
        <fullName>Account_Number__c</fullName>
        <description>The account number pulled from the Account.Cust_ID__c field on the case.</description>
        <inlineHelpText>The account number pulled from the Account.Cust_ID__c field on the case.</inlineHelpText>
        <label>Account Number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attachment_Id__c</fullName>
        <description>The Attactment id for the case if there is one.</description>
        <label>Attachment Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Case_Comment_Id__c</fullName>
        <description>The comment for the case if there is one.</description>
        <label>Case Comment Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Case_Message_Action__c</fullName>
        <description>The action for the message.</description>
        <label>Case Message Action</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Case_Message_Actions</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Message_Destination__c</fullName>
        <description>What is the destination system for this message.</description>
        <label>Case Message Destination</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Case_Message_Destination</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Message_Status__c</fullName>
        <description>The status of the Case Message</description>
        <label>Case Message Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Case_Message_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <description>The Case associated with the message.</description>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Case Messages</relationshipLabel>
        <relationshipName>Case_Messages</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <description>The CreatedBy user&apos;s first name.</description>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Freshdesk_Id__c</fullName>
        <description>The Id of the freshdesk ticket.</description>
        <inlineHelpText>The Id of the freshdesk ticket.</inlineHelpText>
        <label>Freshdesk Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Freshdesk_Queue__c</fullName>
        <defaultValue>&quot;6000024568&quot;</defaultValue>
        <description>The Freshdesk Queue Id corresponding to to a group/queue in Freshdesk.</description>
        <label>Freshdesk Queue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Freshdesk_Type__c</fullName>
        <description>The type used to post to freshdesk.</description>
        <label>Freshdesk Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <description>The CreatedBy user&apos;s last name.</description>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OracleCX_Id__c</fullName>
        <description>The Id of the incident in the Oracle CX System.</description>
        <inlineHelpText>The Id of the incident in the Oracle CX System.</inlineHelpText>
        <label>OracleCX Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OracleCX_Queue__c</fullName>
        <defaultValue>&quot;Default&quot;</defaultValue>
        <description>The Oracle CX Queue Id corresponding to to a group/queue in OCX.</description>
        <label>OracleCX Queue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <description>The Phone number of the user, used to create cases in OracleCX</description>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <description>The product type sent to Freshdesk.</description>
        <inlineHelpText>Used in Freshdesk.</inlineHelpText>
        <label>Product Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QueueDeveloperName__c</fullName>
        <description>The developer name of the queue that owns the case the message is associated with.</description>
        <label>QueueDeveloperName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Queue_Developer_Name__c</fullName>
        <description>The developer name of the queue associated with the case associated with the message.</description>
        <inlineHelpText>The developer name of the queue associated with the case associated with the message.</inlineHelpText>
        <label>Queue Developer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Email__c</fullName>
        <description>CreatedBy User Email</description>
        <label>User Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>User_Full_Name__c</fullName>
        <defaultValue>$User.FirstName + &quot; &quot; + $User.LastName</defaultValue>
        <description>The full name of the user that triggered this message in Salesforce.</description>
        <label>User Full Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The user associate with the case.</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Case_Messages</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Case Message</label>
    <nameField>
        <displayFormat>CM-{000000000}</displayFormat>
        <label>Case Message Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Messages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>